--- a/app/index.css
+++ b/app/index.css
@@ -259,3 +259,11 @@ body {
     background: #292929;
     color: #4a4a4a;
   }
+
+  .space-between {
+    justify-content: space-between;
+  }
+
+  .nav li {
+    margin-right: 10px;
+  }
